// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login component renders correctly if logged in 1`] = `
<Redirect
  push={false}
  to="origin"
/>
`;

exports[`login component renders correctly if logged in and previous location is logout 1`] = `
<Redirect
  push={false}
  to="/logout"
/>
`;

exports[`login component renders correctly if logged in, but no previous location 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`login component renders correctly if not logged in 1`] = `
<Fragment>
  <header
    className="clearfix px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="mx-auto my3 p2 sm-col-6 md-col-4 bg-white rounded"
  >
    <h1
      className="mt0 h2"
    >
      Please log in.
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="mb2"
      >
        <label
          htmlFor="username"
        >
          Email
        </label>
        <input
          className="input"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="mb2"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <Btn
        disabled={false}
        extraCss={null}
        kind="primary"
        size={null}
        type="submit"
      >
        Submit
      </Btn>
    </form>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in 2`] = `
<Fragment>
  <header
    className="clearfix px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="mx-auto my3 p2 sm-col-6 md-col-4 bg-white rounded"
  >
    <h1
      className="mt0 h2"
    >
      Please log in.
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="mb2"
      >
        <label
          htmlFor="username"
        >
          Email
        </label>
        <input
          className="input"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value="bob"
        />
      </div>
      <div
        className="mb2"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <Btn
        disabled={false}
        extraCss={null}
        kind="primary"
        size={null}
        type="submit"
      >
        Submit
      </Btn>
    </form>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in 3`] = `
<Fragment>
  <header
    className="clearfix px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="mx-auto my3 p2 sm-col-6 md-col-4 bg-white rounded"
  >
    <h1
      className="mt0 h2"
    >
      Please log in.
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="mb2"
      >
        <label
          htmlFor="username"
        >
          Email
        </label>
        <input
          className="input"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value="bob"
        />
      </div>
      <div
        className="mb2"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value="secret"
        />
      </div>
      <Btn
        disabled={false}
        extraCss={null}
        kind="primary"
        size={null}
        type="submit"
      >
        Submit
      </Btn>
    </form>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in and fetching data 1`] = `
<Fragment>
  <header
    className="clearfix px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="mx-auto my3 p2 sm-col-6 md-col-4 bg-white rounded"
  >
    <h1
      className="mt0 h2"
    >
      Please log in.
    </h1>
    <form
      onSubmit={[Function]}
    >
      <div
        className="mb2"
      >
        <label
          htmlFor="username"
        >
          Email
        </label>
        <input
          className="input"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="mb2"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <Btn
        disabled={true}
        extraCss={null}
        kind="primary"
        size={null}
        type="submit"
      >
        Submitting
      </Btn>
    </form>
  </div>
</Fragment>
`;

exports[`login component renders correctly if not logged in and there is an error 1`] = `
<Fragment>
  <header
    className="clearfix px2 py1 bg-white"
  >
    <div
      className="left"
    >
      <Link
        className="btn px0 bold caps"
        replace={false}
        to="/"
      >
        CMS HITECH APD
      </Link>
    </div>
  </header>
  <div
    className="mx-auto my3 p2 sm-col-6 md-col-4 bg-white rounded"
  >
    <h1
      className="mt0 h2"
    >
      Please log in.
    </h1>
    <div
      className="mb2 p1 h6 alert alert-error"
    >
      <strong>
        Sorry!
      </strong>
       Something went wrong. Please try again.
    </div>
    <form
      onSubmit={[Function]}
    >
      <div
        className="mb2"
      >
        <label
          htmlFor="username"
        >
          Email
        </label>
        <input
          className="input"
          id="username"
          name="username"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="mb2"
      >
        <label
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="input"
          id="password"
          name="password"
          onChange={[Function]}
          type="password"
          value=""
        />
      </div>
      <Btn
        disabled={false}
        extraCss={null}
        kind="primary"
        size={null}
        type="submit"
      >
        Submit
      </Btn>
    </form>
  </div>
</Fragment>
`;
